2008-05-31  Paolo Carlini  <paolo.carlini@oracle.com> 	    Chris Jefferson  <chris@bubblescope.net>

PR libstdc++/36338
	* include/bits/stl_heap.h (sort_heap): Use __pop_heap directly.
	(pop_heap): Slightly tweak.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@136242 138bc75d-0d04-0410-961f-82ee72b054a4